April ??, 2012 - version 3.0

- NEW: Integrated low latency sound synthesis through Fluidsynth
- NEW: possibility to load user sound banks with Soundfont format 

December 16th, 2011 - version 2.3

- NEW: previously saved exercises can be modified
- NEW: added accidentals to Exercise editor
- fixed MIDI IN device selection which didn't work in some cases
- fixed a potential score reading game crash
- rhythm exercise can now be played with the computer keyboard

December 7th, 2011 - version 2.2

- MAJOR: added ear training panel. 4 levels available: novice, intermediate, expert and custom 
- notes range extended up to 4 additional lines above and below staff
- notes panel is now cleaned up when repeating an exercise
- fixed 6/8 time signature notes display
- added an option to enable metronome accents, to simplify compound time signatures 
- fixed silence insertion for different notes types selection
- latency maximum value extended to 500ms

December 1st, 2011 - version 2.1

- if GM soundbank is not present, ask the user to download it from internet
- MIDI input transposition is now based on semitones, to allow more flexibility 
- redesigned MIDI input configuration window
- Line game: fixed potential crash on key release
- updated russian and hungarian translations

November 27th, 2011 - version 2.0

- MAJOR: added exercises panel. This feature includes:
	* Tree listing of previously saved XML exercises
	* preview of the exercise score properly scaled to fit the panel
	* playback of the exercise to listen to it before playing it
	* buttons to start exercising. Score reading can be also interpreted as notes in line
	* exercise editor
		> create any kind of exercise: line, rhythm, score
		> set clef, accidentals, time signature, speed, random feature
		> add notes and pauses to the score and edit the pitch by just pointing and clicking with the mouse
		> previous notes selection
		> last note removal 
		> playback preview of the notes sequence
		> save on XML file